Changes for networkx adapter.

--- a/tutorials/models/hetro-graph-with-node-features/ITSM_Graph_Embedding.ipynb
+++ b/tutorials/models/hetro-graph-with-node-features/ITSM_Graph_Embedding.ipynb
@@ -132,7 +132,7 @@
     "from ITSM_data_loader import ITSM_Dataloader\n",
     "\n",
     "dl = ITSM_Dataloader(create_db = False)\n",
-    "labels, G = dl.load_data_from_db()"
+    "labels, G = dl.get_networkx_graph(load_from_db=True, graph_desc_file_loc= \"graph_descriptor.yaml\")"
    ]
   },
   {
@@ -216,16 +216,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#model = HeteroRGCN(G, 32,2)\n",
-    "#model(G)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -261,12 +251,6 @@
    "source": [
     "%%time\n",
     "# Create the model. The output has three logits for three classes.\n",
-    "\n",
-    "\n",
-    "#model = HeteroRGCN(G, 512,64, 2)\n",
-    "\n",
-    "#opt = torch.optim.SGD(model.parameters(), lr=0.001)\n",
-    "#,\n",
     "model = HeteroRGCN(G,32,2)\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
     "opt = torch.optim.Adam(model.parameters(), lr=0.001)\n",
